have basic cancan auth working. need to refine to improve usability and other refinements

--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -16,7 +16,11 @@
           <li><%= link_to 'Clients', customers_path %></li>
           <li><%= link_to 'Requests', requests_path %></li>
           <li><a href="/help.html">Help</a></li>
-          <li><%= link_to 'Login', login_path %></li>
+          <% if can? :manage, :all %>
+            <li><%= link_to 'Logout', logout_path %></li>
+          <% else %>
+            <li><%= link_to 'Login', login_path %></li>
+          <% end %>
         </ul>
 
         <!-- Left Nav Section -->
