removed all but read access for users not logged in

--- a/app/views/audits/_audit_details.html.erb
+++ b/app/views/audits/_audit_details.html.erb
@@ -1,7 +1,11 @@
 <div class="panel">
 	<p>
 		<h4 class="button-head">Audit Details</h4>
-		<div><%= link_to 'Update', edit_audit_path(@audit), class: 'button round tiny left ' %></div></br>
+		<div>
+    <% if can? :manage, :all %>
+    <%= link_to 'Update', edit_audit_path(@audit), class: 'button round tiny left ' %>
+    <% end %>
+    </div></br>
 	</p>
 </br>
 	<p>
