--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -26,11 +26,14 @@
         <!-- Left Nav Section -->
         <ul class="left">
           <li class="has-form">
-            <%= link_to 'New Client', new_customer_path, :class => "button" %>
+            <% if can? :manage, :all %>
+              <%= link_to 'New Client', new_customer_path, :class => "button" %>
+            <% end %>
           </li>
           <li class="has-form">
+            <% if can? :manage, :all %>
             <%= link_to 'New Request', new_request_path, :class => "button" %>
-            
+            <% end %>
           </li>
           
         </ul>
