--- a/app/views/audits/show.html.erb
+++ b/app/views/audits/show.html.erb
@@ -17,7 +17,11 @@
 <div class="row">
   <div class="small-12 medium-8 columns">
     <h1 class="button-head">Waste Audit</h1>
-    <div class="add_button"><%= link_to 'Update', edit_audit_path(@audit), class: 'button tiny left ' %></div>
+    <div class="add_button">
+    <% if can? :manage, :all %>
+      <%= link_to 'Update', edit_audit_path(@audit), class: 'button tiny left ' %>
+    <% end %>
+    </div>
 
 
     <!-- RECORDED WASTE MATERIALS -->
@@ -27,7 +31,7 @@
       </div>
 
       <!-- DOWNLOAD AS EXCEL -->
-      <div class="small-12 columns">
+      <div class="small-12 columns show-for-medium-up">
         <p>
           Download:
           <%= link_to "CSV", audit_path(format: "csv") %> |
