--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,7 +1,11 @@
 
   <div class="small-12 columns">
     <h1 class="button-head">All Clients</h1>
-    <div class="add_button"><%= link_to '+ Add Client', new_customer_path, class: 'button round tiny left ' %></div>
+    <div class="add_button">
+    <% if can? :manage, :all %>
+    	<%= link_to '+ Add Client', new_customer_path, class: 'button round tiny left ' %>	
+	<% end %>
+    </div>
   </div>
   
 
