--- a/app/views/requests/_request_details.html.erb
+++ b/app/views/requests/_request_details.html.erb
@@ -1,7 +1,11 @@
 <div class="panel">
 	<p>
 		<h4 class="button-head">Request Details</h4>
-		<div><%= link_to 'Update', edit_request_path(@request), class: 'button round tiny left ' %></div></br>
+		<div>
+    <% if can? :manage, :all %>
+      <%= link_to 'Update', edit_request_path(@request), class: 'button round tiny left ' %>
+    <% end %>
+    </div></br>
 	</p>
 </br>
 	<p>
