--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,6 +1,9 @@
 <div class="small-12 columns">
   <h1 class="button-head">All Requests</h1>
-  <div class="add_button"><%= link_to '+ Add Request', new_request_path, class: 'button round tiny left ' %></div>
+  <% if can? :manage, :all %>
+  	<div class="add_button"><%= link_to '+ Add Request', new_request_path, class: 'button round tiny left ' %></div>
+  <% end %>
+  
 </div>
 
 <div class="small-12 columns">
