--- a/app/views/home/_getting_started.html.erb
+++ b/app/views/home/_getting_started.html.erb
@@ -8,7 +8,9 @@
 			<h2>Welcome,</h2>
 		</div>
 		<div class="row">
-			<p>Choose an option below to get started, or review recent requests and audits.</p>
+			<% if can? :manage, :all %>
+				<p>Choose an option below to get started, or review recent requests and audits.</p>
+			<% end %>
 		</div>
 		<div class="row">
 
@@ -19,6 +21,7 @@
 			</ul> -->
 			
 			<!-- option 1 -->
+			<% if can? :manage, :all %>
 			<%=link_to new_customer_path do %>
 				<div class="small-12 medium-4 columns option-button">
 					<div class="option">
@@ -43,6 +46,17 @@
 						<h4>Update an Ongoing Request</h4>
 					</div>
 				</div>
+			<% end %>
+
+			<% else %>
+
+			<%=link_to login_path do %>
+				<div class="small-12 medium-12 columns option-button">
+					<div class="option">
+						<h4>Login</h4>
+					</div>
+				</div>
+			<% end %>
 			<% end %>
 
 
