deleting audit works now with the redirect linkgit add app/views/requests/_form.html.erb! FINALLYYYYYY YESSSSSSSSS WOOOOOOO

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -39,7 +39,7 @@
             <label for="right-label" class="left inline">* Date</label>
           </div>
           <div class="small-9 columns">
-            <%= f.input :date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter Date", readonly:"readonly"}, label: false %>
+            <%= f.input :date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter Date of Audit", readonly:"readonly"}, label: false %>
           </div>
         </div>
       </div>
