walkthrough delete works

--- a/app/views/walkthroughs/_form.html.erb
+++ b/app/views/walkthroughs/_form.html.erb
@@ -877,6 +877,9 @@
 
   </div>
 
+  <%= link_to 'Delete', @walkthrough, method: :delete, data: { confirm: 'Are you sure?' } %>
+
+
   <div class="sticky-footer">
     <%#= render 'bottom_bar' %>
       <div class="fixed-bottom  show-for-medium-down">
