--- a/app/views/walkthroughs/_show_form.html.erb
+++ b/app/views/walkthroughs/_show_form.html.erb
@@ -881,6 +881,9 @@
             Save
           </div>
 
+      <%= link_to 'Delete', @walkthrough, method: :delete, data: { confirm: 'Are you sure?' } %>
+
+
       </section>
       
       </nav>
