walkthrough save button on bottom

--- a/app/views/walkthroughs/_form.html.erb
+++ b/app/views/walkthroughs/_form.html.erb
@@ -877,6 +877,7 @@
 
   </div>
 
+  <%= f.submit "Save", class: 'button' %>
   <%= link_to 'Delete', @walkthrough, method: :delete, data: { confirm: 'Are you sure?' } %>
 
 
