fixed/added breadcrumbs to each view page

--- a/app/views/audits/show.html.erb
+++ b/app/views/audits/show.html.erb
@@ -1,13 +1,15 @@
+<h5>
+  <%= link_to "Home", root_url %> / 
+  <%= link_to "Requests", requests_path %> /
+  <%= link_to @audit.request.customer.company_name+" - "+@audit.request.date.strftime('%B %e, %Y'), @audit.request %> /
+  <%= link_to @audit.generator %>
+</h5>
 
 <!-- BREADCRUMBS -->
 <div class="row">
   <div class="small-12 columns">
     <p id="notice"><%= notice %></p>
-    <h4>
-      <%= link_to @audit.request.customer.company_name, @audit.request.customer %> > 
-        <%= @audit.request.date.strftime('%B %e, %Y') %> >
-        <%= @audit.generator %>
-    </h4>
+    
 
   </div>
 
@@ -16,7 +18,7 @@
 <!-- TITLE AND EDIT BUTTON -->
 <div class="row">
   <div class="small-12 medium-8 columns">
-    <h1 class="button-head">Waste Audit</h1>
+    <h1 class="button-head"><%= @audit.generator %> Audit</h1>
     <div class="add_button"><%= link_to 'Update', edit_audit_path(@audit), class: 'button tiny left ' %></div>
 
 
