--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,3 +1,9 @@
+<h5>
+	<%= link_to "Home", root_url %> / 
+	<%= link_to "Clients", customers_path %> /
+	<%= link_to @customer.company_name, @customer %>
+</h5>
+
 <div class="small-12 columns">
 	<p id="notice"><%= notice %></p>
 </div>
