--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
     <div class="row">
       <%= yield %>
     </div>
+
+    <%#= breadcrumbs pretext: "You are here: ",
+                separator: " &rsaquo; " %>
     
   </body>
 </html>
