--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,3 +1,8 @@
+<h5>
+	<%= link_to "Home", root_url %> / 
+	<%= link_to "Requests", requests_path %>
+</h5>
+
 <div class="small-12 columns">
   <h1 class="button-head">All Requests</h1>
   <div class="add_button"><%= link_to '+ Add Request', new_request_path, class: 'button round tiny left ' %></div>
