--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,6 +1,10 @@
+<h5>
+	<%= link_to "Home", root_url %> / 
+	<%= link_to "Clients", customers_path %> /
+	<%= link_to @customer.company_name, @customer %>
+</h5>
+
 <h1><%= "Editing Client, " + @customer.company_name%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', @customer, class: "button" %> 
-<%= link_to 'All Clients', customers_path, class: "button"  %>
