--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,3 +1,7 @@
+  <h5>
+    <%= link_to "Home", root_url %> / 
+    <%= link_to "Clients", customers_path %>
+  </h5>
 
   <div class="small-12 columns">
     <h1 class="button-head">All Clients</h1>
