--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,3 +1,8 @@
+<h5>
+	<%= link_to "Home", root_url %> / 
+	<%= link_to "Clients", customers_path %>
+</h5>
+
 <h1>New Client</h1>
 
 <%= render 'form' %>
