--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,10 +1,11 @@
+<h5>
+  <%= link_to "Home", root_url %> / 
+  <%= link_to "Requests", requests_path %> /
+  <%= link_to @request.customer.company_name+" - "+@request.date.strftime('%B %e, %Y'), @request %>
+</h5>
+
 <div class="small-12 large-8 columns">
   <p id="notice"><%= notice %></p>
-
-  <h4>
-    <%= link_to @request.customer.company_name, @request.customer %> > 
-    <%= @request.date.strftime('%B %e, %Y') %>
-  </h4>
 
   <h1 class="button-head">Documents</h1>
   <div class="add_button show-for-medium-up">
