--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,6 +1,5 @@
 <h1>Editing note</h1>
 
-<%= render 'form' %>
+<%= render 'form', :edit => true %>
 
-<%= link_to 'Show', @note %> |
-<%= link_to 'Back', notes_path %>
+
