--- a/app/views/walkthroughs/_show_form.html.erb
+++ b/app/views/walkthroughs/_show_form.html.erb
@@ -7,7 +7,7 @@
     <div class="small-12 medium-6 columns">
       <div class="actions">
         <%= link_to 'Back to Request', request_path(@walkthrough.request_id), class: 'button' %>
-        <%= f.submit "Save", class: 'button' %>
+        <%= f.submit "Save", class: 'button success' %>
         
       </div>
     </div>
@@ -66,7 +66,7 @@
   <div class="small-12 medium-6 columns show-for-large">
       <div class="actions">
         <%= link_to 'Back to Request', request_path(@walkthrough.request_id), class: 'button' %>
-        <%= f.submit "Save", class: 'button' %>
+        <%= f.submit "Save", class: 'button success' %>
         
       </div>
     </div>
