updated request details partial on request show page

--- a/app/views/requests/_request_details.html.erb
+++ b/app/views/requests/_request_details.html.erb
@@ -28,7 +28,7 @@
 
   <p>
     <strong>Email:</strong>
-    <% if @request.title.empty? %>
+    <% if @request.email.empty? %>
       <%= "n/a" %>
     <% else %>
       <%= @request.email %>
