added _destroy to audits controller and added link_to_remove to wastes

--- a/app/views/audits/_form.html.erb
+++ b/app/views/audits/_form.html.erb
@@ -90,14 +90,17 @@
             <%= f.fields_for :wastes do |waste_form| %>
               <%= waste_form.hidden_field :audit_id, input_html: {value: @aud_id}%>
               <div class="row">
-                <div class="small-12 medium-5 columns">
+                <div class="small-12 medium-4 columns">
                   <%= waste_form.select :material_type, ["Batteries", "Cardboard", "Compostable Food Service Ware", "Dairy and Juice Containers", "Electronic Waste", "Fluorescent Tubes", "Food Scraps", "K-Cups", "Metal Cans, Glass Bottles, and Jars", "Miscellaneous", "Mixed Paper, Newspaper & Magazines", "Mylar Film", "Paper Towels", "Plastic (1-5 & 7) and Containers", "Plastic Film", "Restroom Waste", "Reuse (Clothes, books, pens, etc.)", "Toner Cartridges", "White Ledger Paper"], prompt: "Material type (required)..." %>
                 </div>
                 <div class="small-4 medium-2 columns">
                   <%= waste_form.text_field :weight, placeholder: "Weight (lbs)..." %>
                 </div>
-                <div class="small-8 medium-5 columns">
+                <div class="small-6 medium-4 columns">
                   <%= waste_form.text_field :origin, placeholder: "Enter origin..." %>
+                </div>
+                <div class="small-2 medium-2 columns">
+                  <%= waste_form.link_to_remove 'X', class: 'tiny button round alert', new: true %>
                 </div>
               </div>
             <% end %>
