removed some stuff from questionnaire for tsting

--- a/app/views/walkthroughs/_form.html.erb
+++ b/app/views/walkthroughs/_form.html.erb
@@ -78,13 +78,10 @@
    <div class="small-12 medium-8 columns show-for-large">
       <div class="actions">
         <%= link_to 'Back to Request', request_path(@walkthrough.request_id), class: 'button' %>
-        <%= link_to 'Add Note', new_note_path(:request_id => @walkthrough.request_id), class: 'button' %>
+
         <% if not @walkthrough.date.nil? %>
            <%= link_to 'Delete', @walkthrough, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button' %>
         <% end %>
-
-        <%= f.submit "Save", class: 'button' %>
-
 
         <%= f.submit "Save", class: 'button success' %>
 
@@ -100,31 +97,22 @@
   
 
 
-  <div class="sticky-footer">
+<!--   <div class="sticky-footer">
     <%#= render 'bottom_bar' %>
       <div class="fixed-bottom  show-for-medium-down">
       <nav class="top-bar bottom-bar" >
         <section class="top-bar-section">
 
-          <%= link_to new_note_path(:request_id => @walkthrough.request_id), data: { confirm: 'Are you want to navigate away from this page? Unsaved Questionnaire information will be lost!' } do %>
-           <!-- (@walkthrough.request_id) -->
-            <!-- <div class="small-12 medium-6 columns show-for-large">
-              Add Notes
-            </div> -->
-          <% end %>
-
-<!--           <div class="bottom-button save-button"  >
-            Save
-          </div> -->
+          <%#= link_to new_note_path(:request_id => @walkthrough.request_id), data: { confirm: 'Are you want to navigate away from this page? Unsaved Questionnaire information will be lost!' } do %>
+     
+                    <% #end %>
 
 
-          <!-- <ul class="left">
-          <li><%#=link_to 'Add Note', new_note_path, class: "button bottom_button"%></li>
-          <li><%#=link_to 'Save', new_note_path, class: "button bottom_button"%></li>
-      </ul> -->
       </section>
       
       </nav>
     </div>
-  </div> 
+  </div>  -->
+
+
 <% end %>
