--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,5 +1,12 @@
 <div class="small-12 columns">
 	<p id="notice"><%= notice %></p>
+	<h5>
+		<%= link_to "Requests", requests_path %> /
+	  <%= link_to @note.request.customer.company_name+" - "+@note.request.date.strftime('%B %e, %Y') + " / ", @note.request %>
+	  <%= link_to "Note", @note %>
+	</h5>
+
+		<%= link_to 'Back to Request', request_path(@note.request_id), class: "button" %>
 
 		<p>
 		  <%if @note.image.exists?%>
@@ -13,7 +20,7 @@
 		  <%= @note.description %>
 		</p>
 
-		<%= link_to 'Edit', edit_note_path(@note), class: "button" %>
-        <td><%= link_to 'Delete', :note, method: :delete, data: { confirm: 'Are you sure?' }, class: "button" %></td>		
-        <%= link_to 'Back to Request', request_path(@note.request_id), class: "button" %>
+		<%= link_to 'Update', edit_note_path(@note), class: "button" %>
+        <td><%= link_to 'Delete', :note, method: :delete, data: { confirm: 'Are you sure?' }, class: "alert button" %></td>		
+        
  </div>
